--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lostinthemoss",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://colinlmacleod1.github.io/lost-in-the-moss/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gh-deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
-    "@types/mocha": "^10.0.6"
+    "@types/mocha": "^10.0.6",
+    "gh-pages": "^6.1.1"
   }
 }
